--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,29 @@
 
 old_functions.txt
 
+# Byte-compiled / optimized / DLL files:
 __pycache__/
-.idea/
+*.py[cod]
+*$py.class
+
+
+# Environments:
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+
+# IDE settings:
+.idea
+
+
+# misc:
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
